--- a/Video2Gba.csproj
+++ b/Video2Gba.csproj
@@ -50,6 +50,8 @@
     <Compile Include="IOStream.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ROM.cs" />
+    <Compile Include="VideoCompression.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
