Updated rom to C, need to auto decode audio, may help with timing.

--- a/Video2Gba.csproj
+++ b/Video2Gba.csproj
@@ -57,6 +57,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DSDecmp\DSDecmp.csproj">
+      <Project>{e6f419f9-d6b5-4be7-99bb-97c48c927ff3}</Project>
+      <Name>DSDecmp</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
