--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NAudio" version="1.10.0" targetFramework="net452" />
+  <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net452" />
+  <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net452" />
 </packages>
