Compression updates,  started libgrit use

--- a/ROMCode/Makefile
+++ b/ROMCode/Makefile
@@ -159,7 +159,7 @@ soundbank.bin soundbank.h : $(AUDIOFILES)
 %.img.bin.o	%img.bin.h :	%.img.bin
 #---------------------------------------------------------------------------------
 	echo $(notdir $<)
-	$(bin2o)
+	@$(bin2o)
 #---------------------------------------------------------------------------------
 %.pcx.o	%_pcx.h :	%.pcx
 #---------------------------------------------------------------------------------
