--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NAudio" version="1.10.0" targetFramework="net452" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net452" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net452" />
   <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net452" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net452" />
 </packages>
